--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:./db_dev;MODE=MYSQL
+    url: jdbc:h2:mem:db_test;MODE=MYSQL
   jpa:
     hibernate:
       ddl-auto: create
