--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -23,6 +23,6 @@ logging:
 custom:
   tempDirPath: /gen/temp
   site:
-    baseUrl: "https://www.s-code.io"
+    baseUrl: "https://tg.lchm.store"
   genFile:
     dirPath: /gen
